--- a/flexbox.css
+++ b/flexbox.css
@@ -1,8 +1,8 @@
 /* --------------------------------------------------------
 version: 1.1
-last modified: 28.9. 2020
+last modified: 25.10. 2020
 author: Lukáš Koliandr
-email: ondrlu18@sps-prosek.cz
+email: koliandr.lu@gmail.com
 
 ----------------------------------------------------------*/
 
